--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.12",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@lexical/react": "^0.16.0",
@@ -15,6 +16,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "aws-amplify": "^6.3.6",
     "lexical": "^0.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
